--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
     width: 96px;
     height: auto;
 }
+
+.footer {
+    background-color: #007cba;
+    color: white;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+}
+
 .btn-primary {
     background-color: #007cba;
     color: white;
